--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
             <a href="/index.html" class="logo"> Sultan's Dine </a>
           </div>
           <nav class="nav-links">
-            <a href="/index.html" class="nav-item active">Home</a>
-            <a href="/about.html" class="nav-item">About us</a>
-            <a href="/menu.html" class="nav-item">menu</a>
-            <a href="/gallery.html" class="nav-item">gallery</a>
-            <a href="/contact.html" class="nav-item">contact us</a>
-            <a href="/review.html" class="nav-item">user review</a>
+            <a href="index.html" class="nav-item active">Home</a>
+            <a href="about.html" class="nav-item">About us</a>
+            <a href="menu.html" class="nav-item">menu</a>
+            <a href="gallery.html" class="nav-item">gallery</a>
+            <a href="contact.html" class="nav-item">contact us</a>
+            <a href="review.html" class="nav-item">user review</a>
           </nav>
 
           <div class="mobile-menu-toggle">
@@ -43,12 +43,12 @@
 
       <div class="mobile-menu" id="mobileMenu">
         <ul>
-          <li><a href="/index.html">Home</a></li>
-          <li><a href="/about.html">About us</a></li>
-          <li><a href="/menu.html">menu</a></li>
-          <li><a href="/gallery.html">gallery</a></li>
-          <li><a href="/contact.html">contact us</a></li>
-          <li><a href="/review.html">user review</a></li>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="about.html">About us</a></li>
+          <li><a href="menu.html">menu</a></li>
+          <li><a href="gallery.html">gallery</a></li>
+          <li><a href="contact.html">contact us</a></li>
+          <li><a href="review.html">user review</a></li>
         </ul>
       </div>
     </header>
